# PrimaryEngine

./: .gitmodules  CMakeLists.txt
base/shaders/: standart.fsh  standart.vsh
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/Core/: Transform.cpp  Transform.h
src/Core/Resources/: ResourceManager.cpp  ResourceManager.h
src/Renderer/Drawable/: Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
src/Renderer/Shaders/: ShaderProgram.cpp  ShaderProgram.h
